fix width and broken input groups at certain width

--- a/style.css
+++ b/style.css
@@ -67,3 +67,11 @@ tr th div {
 .hide{
   display:none;
 }
+
+.container-lg {
+  max-width: 1500px;
+}
+
+.input-group {
+  flex-wrap: nowrap;
+}
